ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

03/11/02 russ

	* makefile changes to accomodate OSs with command line length
	  limitations (thanks to Norman Lin).

01/06/02 russ

	* added the dBodySetGravityMode() and dBodyGetGravityMode()
	  functions, which change the dxBodyNoGravity body flag.

	* added support for building a DLL with MSVC - there is now a
	  msvc-dll target. thanks to Norman Lin for doing this.

12/28/01 russ

	* added the dParamCFM joint parameter.

12/24/01 russ

	* reworked the build system to make it more cross-platform.
	  there is now a single top-level makefile and a configurator.c
	  program. see the INSTALL file for details.

12/04/01 russ

	* the "angular motor" joint has been completed, and a new section
	  has been added to the documentation.

11/26/01 russ

	* added a new joint type: "angular motor". using this joint is a good
	  way to get ball-joint motors and limits. this is work in progress -
	  it has not been fully implemented or tested yet.

11/22/01 russ

	* replaced the mmap()-based joint group stack (stack.cpp) with a
	  malloc()-based arena stack (obstack.cpp). this will be more
	  portable and should not impact performance.

11/12/01 russ

	* changed the meaning of the 'flags' parameter to dCollide() and
	  related functions: now the size of the contact buffer is kept in
	  the lower 16 bits. this change will be backward compatible.

	* added dBodyGetFiniteRotationMode() and dBodyGetFiniteRotationAxis().

	* added dBodyAddForceAtRelPos() function.

11/11/01 russ

	* added the ability to manually enable and disable bodies.
	  see dBodyEnable(), dBodyDisable(), dBodyIsEnabled().
